--- a/packages/create-falcon-app/package.json
+++ b/packages/create-falcon-app/package.json
@@ -6,7 +6,8 @@
   "repository": "https://github.com/deity-io/falcon/tree/master/packages/create-falcon-app",
   "license": "OSL-3.0",
   "bin": {
-    "create-falcon-app": "./bin/create-falcon-app.js"
+    "create-falcon-app": "./bin/create-falcon-app.js",
+    "create-server-config": "./bin/create-server-config.js"
   },
   "scripts": {
     "prepare": "node scripts/prepublish.js"
@@ -19,6 +20,7 @@
     "commander": "2.19.0",
     "execa": "1.0.0",
     "fs-extra": "7.0.0",
+    "inquirer": "^7.0.4",
     "listr": "0.14.2",
     "node-machine-id": "^1.1.10"
   },
